Fix title alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -729,7 +729,7 @@ $data-statuses: (
     font-weight: normal;
     margin: 0;
     padding: 0.5em;
-    padding-left: 1.5em;
+    padding-left: 7.5em;
     color: #ccc;
     text-align: center;
     text-transform: none;
